# tweets-to-discord

./: .gitignore  Cargo.toml  README.md  config.yaml
src/: main.rs
