[package]
name = "tweets-to-discord"
version = "0.1.0"
authors = ["Simon Sawert <simon@sawert.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
egg-mode = "0.15"
env_logger = "0.8.2"
futures = "0.3"
log = "0.4"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_yaml = "0.8"
tokio = { version = "0.2.8", features = ["full"] }

[dependencies.serenity]
version = "0.10.2"
default-features = false
features = [
    "rustls_tokio_0_2_backend",
    "client",
    "gateway",
    "model",
]
